--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -8,6 +8,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-left: 15px;
+    padding-left: 10px;
   }
 
   .image-preview-container {
@@ -18,7 +19,7 @@
   .image-preview {
     width: 100%;
     height: auto;
-    max-height: 200px; /* Set a maximum height for the preview */
+    max-height: 200px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
@@ -33,6 +34,8 @@
     cursor: pointer;
     display: none;
   }
+
+  
 </style>
 
 <body class="g-sidenav-show bg-gray-200">
@@ -115,7 +118,7 @@
                   <label for="description" class="font-weight-bold pl-3 " style="color: #000000;">Description</label>
                   <div class="row">
                     <div class="col-6">
-                      <textarea name="description" class="form-control  form-style" id="description" rows="4" ></textarea>
+                      <input name="description" class="form-control  form-style" id="description" rows="4" ></input>
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                     <div class="col-6">
@@ -130,8 +133,9 @@
                         </div>
                         <div class="image-preview-wrapper" style="width:250px; height:250px; display: flex; flex-direction: row;"></div>
 
-                  <button type="submit" class="btn btn-lg btn-primary mr-2 mt-5">Add Product</button>
+                  
                 </div>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Add Product</button>
               </form>
             </div>
           </div>
@@ -140,14 +144,7 @@
     </div>
   </main>
 
-
-
- 
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 <script>
   $(document).ready(function () {
