--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -25,13 +25,13 @@
                         <table class="table table-cart table-mobile">
                             <thead>
                                 <tr>
-                                    <th>No.</th>
-                                    <th>Order Date</th>
-                                    <th>Amount</th>
-                                    <th>Payment</th>
-                                    <th>Expected Delivery</th>
-                                    <th>Tracking Number</th>
-                                    <th>Details</th>
+                                    <th class="text-center">No.</th>
+                                    <th class="text-center">Order Date</th>
+                                    <th class="text-center">Amount</th>
+                                    <th class="text-center">Payment</th>
+                                    <th class="text-center">Expected Delivery</th>
+                                    <th class="text-center">Tracking Number</th>
+                                    <th class="text-center">Details</th>
                                 </tr>
                             </thead>
 
@@ -39,13 +39,13 @@
                               <% if(orders.length>0){%>
                                    <% for(let i=0; i<orders.length;i++){%>
                                 <tr>
-                                    <td><%= i+1 %></td>
-                                    <td><%= orders[i].date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
-                                    <td>₹ <%= orders[i].totalAmount %></td>
-                                    <td> <%= orders[i].paymentMethod %></td>
-                                    <td><%= orders[i].expectedDelivery.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
-                                    <td><%= orders[i].uniqueId %></td>
-                                    <td>
+                                    <td class="text-center"><%= i+1 %></td>
+                                    <td class="text-center"><%= orders[i].date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                                    <td class="text-center">₹ <%= orders[i].totalAmount %></td>
+                                    <td class="text-center"> <%= orders[i].paymentMethod %></td>
+                                    <td class="text-center"><%= orders[i].expectedDelivery.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
+                                    <td class="text-center"><%= orders[i].uniqueId %></td>
+                                    <td class="text-center">
                                         <a  href="/orderDetails?id=<%= orders[i]._id %>" class=" btn  rounded-pill " style="background-color: rgb(205, 205, 205);">View Details</a>
                                     </td>
                                 </td>
