--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -343,7 +343,7 @@
                 Excel <i class="bi bi-file-earmark-spreadsheet"></i></button>
         </div>
         <div class="table-responsive">
-            <table class="table table-striped table-bordered table-md" id="sortTable"
+            <table class="table table-striped table-bordered " id="sortTable"
                 cellspacing="0" width="100%">
                 <thead class="thead-light">
                     <tr>
