--- a/views/admin/layouts/adminHeader.ejs
+++ b/views/admin/layouts/adminHeader.ejs
@@ -28,6 +28,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css" rel="stylesheet">
 
 
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css"/>
+
+
 <link rel="stylesheet" type="text/css" href="/static/userAssets/css/styles.css">
 
     
